--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <body>
 <div class="content-wrapper">
     <div class="content-card">
+        <label class="switch">
+            <input type="checkbox">
+            <span class="slider round"></span>
+          </label>
         <h1>Where are the fishies?</h1>
         <img src="olive.jpg" alt="black and white cat">
         <div>
